feat: add security.xaostech.io worker + update all deps
- Created security.xaostech.io worker for monitoring Dependabot alerts
- Auto-dismisses non-applicable alerts (Deno-only, dev deps, etc.)
- Tracks all alerts in D1 database for audit
- Uses GitHub App for bot identity

- Updated all workers to latest Hono/Zod/Wrangler versions
- Resolves Dependabot security alerts across all repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,10 @@
 	path = account.xaostech.io
 	url = https://github.com/XAOSTECH/account.xaostech.io.git
 
+[submodule "ai.xaostech.io"]
+	path = ai.xaostech.io
+	url = https://github.com/XAOSTECH/ai.xaostech.io.git
+
 [submodule "api.xaostech.io"]
 	path = api.xaostech.io
 	url = https://github.com/XAOSTECH/api.xaostech.io.git
