--- a/security.xaostech.io/tsconfig.json
+++ b/security.xaostech.io/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "ESNext",
-        "moduleResolution": "Bundler",
+        "module": "ES2022",
+        "moduleResolution": "bundler",
         "lib": [
             "ES2022"
         ],
@@ -10,13 +10,12 @@
             "@cloudflare/workers-types"
         ],
         "strict": true,
-        "skipLibCheck": true,
         "noEmit": true,
+        "skipLibCheck": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src/**/*"
